syntax = "proto3";

// VIDEO SUMMARIZE
message VideoSummarizeRequest {
  string url = 1;
  optional string summarizeId = 3;
  bool bypassCache = 4;
  string videoTitle = 5;
  int32 unknown1 = 6;
  string language = 7;
  // ab_model_control
  string flags = 8;
  int32 unknown2 = 10;
  int32 unknown3 = 11;
}

message SummarizeThesisObject {
  int32 thesisId = 1;
  string content = 2;
}

message SummarizeChapterObject {
  int32 chapterId = 1;
  // chapter title
  string title = 2;
  // video offset
  double offset = 3;
  repeated SummarizeThesisObject theses = 4;
}

message VideoSummarizeResponse {
  repeated SummarizeChapterObject chapters = 1;
  // 0 is FINISHED
  // 1 is GENERATING
  int32 status = 2;
  string summarizeId = 4;
  // time before new request in ms
  int32 interval = 5;
  optional string summarizeTitle = 8;
  optional string unknown0 = 10;
}